add permission bind view
